# neops

./: .dockerignore  .gitignore  .gitmodules  .mailmap  404.html  AGENTS.md  CLAUDE.md  CNAME  Dockerfile  Makefile  README.md  authors.yml  index.html  mkdocs.yml  mkdocs_custom.yml  pyproject.toml  sitemap.xml
.agent/knowledge/: documentation-review-findings.md
.agent/rules/: documentation-writing-root.md  documentation-writing.md
.github/: copilot-instructions.md
.github/workflows/: build-documentation.yml  gh-pages.yml
.make_scripts/mkdocs-documentation/: Dockerfile  clean_sites_directory.py  doc_serve_watch.py  mkdocs-documentation-makefile.mk  mkdocs_base.yml  mkdocs_custom.yml  pyproject.toml  setup_documentation.py  setup_documentation.sh
.make_scripts/mkdocs-documentation/.github/workflows/: build-documentation.yml
.make_scripts/mkdocs-documentation/docs_template/: .symlinkignore  authors.yml  index.md
.make_scripts/mkdocs-documentation/docs_template/assets/: extra.css
.make_scripts/mkdocs-documentation/hooks/: fix_symlinks.py  inline_nav_include.py  submodule_authors.py
.make_scripts/mkdocs-documentation/templates/: mailmap
coming-soon/: index.html
concepts/: index.html
concepts/10-overview/: index.html
concepts/20-how-neops-operates/: index.html
development/10-setup/: index.html
docs/: authors.yml  coming-soon.md  index.md  make_scripts  neops-gql-gtw  utils
docs/assets/: extra.css  extra.js
docs/concepts/: 10-overview.md  20-how-neops-operates.md  index.md
docs/development/: 10-setup.md
docs/getting-started/: 00-index.md
docs/installation/: index.md
docs/legacy/: 00-index.md  05-usage.md  10-facts.md  15-checks.md  20-tasks.md  25-provider.md  30-provider_overview.md  35-architecture.md  40-appendix.md  CONTRIBUTING.md  contribute_documentation.md  development.md  installation.md
docs/modules/: OIDC.md  index.md
docs/override/: main.html
docs/principels/: index.md
docs/snippets/: auth_providers_example.json
getting-started/00-index/: index.html
installation/: index.html
make_scripts/mkdocs-documentation/: Dockerfile  clean_sites_directory.py  mkdocs-documentation-makefile.mk  mkdocs_base.yml  mkdocs_custom.yml  mkdocsignore  pyproject.toml  setup_documentation.py  setup_documentation.sh
make_scripts/mkdocs-documentation/docs_template/: index.html  index.md
make_scripts/mkdocs-documentation/docs_template/override/: main.html
modules/: index.html
neops-gql-gtw/: index.html
neops-graphql-docs/: index.html
neops-remote-lab/: index.html
neops-secure-gateway/: index.html
neops-secure-gateway-docs/: index.html
neops-task-engine-docs/: index.html
neops-task-runner-python-docs/: index.html
neops-web-client/: index.html
neops-web-client-docs/: index.html
neops-web-sdk/: index.html
neops-web-sdk-docs/: index.html
neops-worker-sdk-py/: index.html
neops-workflow-engine/: index.html
neops-workflow-engine-docs/: index.html
search/: search_index.json
utils/: scan_docs.py
(+950 files in other folders)
