[project]
name = "mkdocs-documentation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deepmerge",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-dir-to-nav",
    "mkdocs-exclude",
    "slugify",
    "unicode",
    "python-slugify",
    "mkdocs-monorepo-plugin",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pathspec",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

