[tool.poetry]
name = "mkdocs-documentation"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

deepmerge = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-include-dir-to-nav = "*"
slugify = "*"
unicode = "*"
python-slugify = "*"
mkdocs-monorepo-plugin = "*"
mkdocs-git-authors-plugin = "*"
mkdocs-git-revision-date-localized-plugin = "*"
pathspec = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
